--- a/app/app.component.html
+++ b/app/app.component.html
@@ -13,7 +13,7 @@
       <img src="./../assets/App icons/icon_maps_01.svg" style="width:45px">
       <img src="./../assets/App icons/icon_images_01.svg" style="width:45px">
       <img src="./../assets/App icons/icon_images_02.svg" style="width:45px">
-      <img src="./../assets/App icons/icon_winner_gradient.svg" style="width:45px; opacity:1">
+      <img src="./../assets/App icons/icon_winner_gradient.svg" style="width:45px; border-radius:4px;" routerLink="/auth" routerLinkActive="active">
     </div>
       <div id='app_container'>
       <router-outlet></router-outlet>
