--- a/app/app.component.html
+++ b/app/app.component.html
@@ -6,12 +6,8 @@
     <div id='menu'>
       <member></member>
       <img src="./../assets/App icons/icon_chat_01.svg" style="width:45px" routerLink="/chat" routerLinkActive="active">
-      <img src="./../assets/App icons/icon_activity.svg" style="width:45px">
-      <img src="./../assets/App icons/icon_documents.svg" style="width:45px">
-      <img src="./../assets/App icons/icon_calendar.svg" style="width:45px">
-      <img src="./../assets/App icons/icon_guest.svg" style="width:45px">
       <img src="./../assets/App icons/icon_maps_01.svg" style="width:45px">
-      <img src="./../assets/App icons/icon_images_01.svg" style="width:45px">
+      <img src="./../assets/App icons/icon_share_01.svg" style="width:45px">
       <img src="./../assets/App icons/icon_images_02.svg" style="width:45px">
       <img src="./../assets/App icons/icon_winner_gradient.svg" style="width:45px; border-radius:4px;" routerLink="/auth" routerLinkActive="active">
     </div>
