--- a/styles.css
+++ b/styles.css
@@ -2,33 +2,26 @@
   box-sizing: border-box;
   font-family: verdana;
   font-weight: 100;
-  overflow: hidden;
+  margin: 0;
+  padding: 0px;
+  font-size: 12px;
+  overflow-x: hidden;
 }
 html {
-  min-height: 100vh;
-  min-width: 100vh;
 }
 body {
-  padding: 0px;
   border: 0;
-  margin: 0;
 }
 #main_container {
-  max-height: 100%;
   max-width: 100%;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
-#left_column {
-  background: #444;
-  color: #AAA;
-  min-height: 100vh;
-  padding: 10px;
-}
-#right_column {
-  min-height: 100vh;
-  flex-grow: 1;
+#middle_column {
+  width: 800px;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
@@ -36,45 +29,61 @@ body {
 #menu {
   color: #FFF;
   background-image: linear-gradient(145deg, rgb(13, 71, 161), rgb(66, 165, 245));
-  padding: 15px;
-}
-#member {
-  float: left;
+  padding: 15px 15px 2px 15px;
 }
 #app_container {
   flex-grow: 1;
-  padding: 15px;
   display: flex;
   flex-wrap: nowrap;
-  flex-direction: column-reverse;
+  flex-direction: column;
+  height: 100vh;
 }
-
 .selected {
   background-color: #666 !important;
   color: white;
 }
+.user {
+  padding: 5px;
+}
+.chat{
+  flex-grow: 1;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column-reverse;
+  padding: 5px;
+}
 .teams {
-  font-size: small;
+  background: #444;
+  color: white;
+  padding: 20px;
   list-style-type: none;
-  padding: 0;
-  width: 170px;
+  width: 100%;
+}
+.teamProfile{
+  padding: 5px;
 }
 .teams li {
   cursor: pointer;
   position: relative;
   left: 0;
   border-radius: 4px;
-  padding: 3px;
+  padding: 5px;
 }
 .teams li.selected:hover {
   background-color: #BBD8DC !important;
-  color: white;
 }
 .teams li:hover {
   color: #607D8B;
   background-color: #DDD;
 }
-
+.titleSeperator {
+  width: 100%;
+  background-color: #EEE;
+  color: #888;
+  padding: 5px;
+  padding-top: 15px;
+  text-align: center;
+}
 img {
   opacity: 0.5;
 }
@@ -85,19 +94,67 @@ img.active {
   opacity: 1;
 }
 button {
-  background: rgba(255,255,255,.1);
-  border-style: solid;
-  border-width: thin;
+  cursor: pointer;
+  background: #33b5e5;
+  width: 95%;
+  border: 0;
+  padding: 10px;
+  margin: 5px;
+  color: #ffffff;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
   border-radius: 4px;
-  cursor:pointer;
-  padding: 7px;
-  color: inherit;
 }
-input{
-  background: rgba(255,255,255,.1);
-  border-style: solid;
-  border-width: thin;
+button:hover {
+  background: #178ab4;
+}
+input {
+  outline: none;
+  display: block;
+  width: 95%;
+  border: none;
+  padding: 10px;
+  margin: 5px;
+  box-sizing: border-box;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
   border-radius: 4px;
-  padding: 7px;
-  color: inherit;
+}
+input:focus {
+  border: 1px solid #33b5e5;
+  color: #333333;
+}
+#login {
+  padding-top: 25px;
+  background: #2591c6;
+  text-align: center;
+  color: #666666;
+  font-family: 'RobotoDraft', 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+/* Form Module */
+.form-module {
+  position: relative;
+  background: #ffffff;
+  max-width: 320px;
+  width: 100%;
+  border-top: 5px solid #33b5e5;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+}
+.form-module .form {
+  padding: 40px;
+}
+.form-module .cta {
+  background: #f2f2f2;
+  width: 100%;
+  padding: 15px;
+  box-sizing: border-box;
+  color: #666666;
+  text-align: center;
+}
+.form-module .cta a {
+  color: #333333;
+  text-decoration: none;
 }
