--- a/styles.css
+++ b/styles.css
@@ -11,32 +11,35 @@ html {
 }
 body {
   border: 0;
+  height:100%;
 }
-#main_container {
+/*#main_container {
   max-width: 100%;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-}
+}*/
 #middle_column {
-  width: 800px;
+  height: 100vh;
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: column;
+  flex-wrap: wrap;
+  flex-flow: column;
+  overflow: hidden;
 }
 #menu {
   color: #FFF;
   background-image: linear-gradient(145deg, rgb(13, 71, 161), rgb(66, 165, 245));
   padding: 15px 15px 2px 15px;
+  /*display: flex;*/
+  flex: 0 0 20%;
+
 }
 #app_container {
-  flex-grow: 1;
-  display: flex;
-  flex-wrap: nowrap;
+  flex: 1 1 60%;
   flex-direction: column;
-  height: 100vh;
+  overflow: auto;
 }
 .selected {
   background-color: #666 !important;
@@ -52,6 +55,7 @@ body {
   flex-direction: column-reverse;
   padding: 5px;
 }
+
 .teams {
   background: #444;
   color: white;
