--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,17 @@
   margin: 0;
   padding: 0px;
   font-size: 12px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 html {
 }
 body {
   border: 0;
+  height: 100vh;
 }
 #main_container {
-  max-width: 100%;
+  height: 100vh;
+  min-height: 500px;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
@@ -22,6 +24,7 @@ body {
 }
 #middle_column {
   width: 800px;
+  height: 100%;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
@@ -32,11 +35,7 @@ body {
   padding: 15px 15px 2px 15px;
 }
 #app_container {
-  flex-grow: 1;
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: column;
-  height: 100vh;
+  overflow-y: auto;
 }
 .selected {
   background-color: #666 !important;
@@ -46,10 +45,11 @@ body {
   padding: 5px;
 }
 .chat{
-  flex-grow: 1;
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: column-reverse;
+  overflow-y: auto;
+  height: 400px;
+  padding: 5px;
+}
+.chat-input{
   padding: 5px;
 }
 .teams {
@@ -85,20 +85,17 @@ body {
   text-align: center;
 }
 img {
-  opacity: 0.5;
 }
 img:hover {
-  opacity: 1;
 }
 img.active {
-  opacity: 1;
 }
 button {
   cursor: pointer;
   background: #33b5e5;
   width: 95%;
   border: 0;
-  padding: 10px;
+  padding: 7px;
   margin: 5px;
   color: #ffffff;
   -webkit-transition: 0.3s ease;
@@ -125,7 +122,7 @@ input:focus {
   color: #333333;
 }
 #login {
-  padding-top: 25px;
+  padding: 25px 0 25px 0;
   background: #2591c6;
   text-align: center;
   color: #666666;
@@ -139,22 +136,31 @@ input:focus {
   background: #ffffff;
   max-width: 320px;
   width: 100%;
-  border-top: 5px solid #33b5e5;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
   margin: 0 auto;
 }
 .form-module .form {
   padding: 40px;
 }
+.form-module .message {
+  font-size: 10px;
+  background: #1db217;
+  width: 100%;
+  padding: 5px;
+  box-sizing: border-box;
+  color: white;
+  text-align: center;
+}
 .form-module .cta {
   background: #f2f2f2;
   width: 100%;
-  padding: 15px;
+  padding: 7px;
   box-sizing: border-box;
   color: #666666;
   text-align: center;
 }
 .form-module .cta a {
+  font-size: 10px;
   color: #333333;
   text-decoration: none;
 }
